corrects the rules compliance in stream plugin